# cfrainbow

./: .gitignore  .pre-commit-config.yaml  HISTORY.md  LICENSE.md  Makefile  README.md  bench.py  cfr.py  cfr2.py  cfr2_base.py  cfr_cs.py  cfr_discounted.py  cfr_discounted2.py  cfr_exp.py  cfr_exp2.py  cfr_linear.py  cfr_linear2.py  cfr_monte_carlo_chance_sampling.py  cfr_monte_carlo_chance_sampling2.py  cfr_monte_carlo_external_sampling.py  cfr_monte_carlo_external_sampling2.py  cfr_monte_carlo_outcome_sampling.py  cfr_monte_carlo_outcome_sampling2.py  cfr_plus.py  cfr_plus2.py  cfr_predictive_plus.py  cfr_pure.py  cfr_pure2.py  cfr_sampling.py  cfr_vanilla.py  equilibria.py  intro_regret_matching.py  main.py  mccfr.py  minimal.py  plot_convergence.py  plot_rainbow.py  pyproject.toml  regret_matching.py  rm.py  (+5 more)
.github/: python.yml
.github/workflow/: python.yml
.github/workflows/: python.yml
cfr/: __init__.py  cfr_base.py  cfr_discounted.py  cfr_exp.py  cfr_internal.py  cfr_joint_reconstruction.py  cfr_monte_carlo_chance_sampling.py  cfr_monte_carlo_external_sampling.py  cfr_monte_carlo_outcome_sampling.py  cfr_plus.py  cfr_predictive_plus.py  cfr_pure.py  cfr_sampling.py  cfr_vanilla.py
docs/: plot_banner.py
docs/font/honey-script/: 1001fonts-honey-script-eula.txt
examples/: plot_convergence.py
rm/: __init__.py  external.py  internal.py
scripts/: build.py
src/cfrainbow/: __init__.py  main.py  spiel_types.py  utils.py
src/cfrainbow/cfr/: __init__.py  cfr_base.py  cfr_br.py  cfr_discounted.py  cfr_exp.py  cfr_internal.py  cfr_joint_reconstruction.py  cfr_lazy.py  cfr_linear.py  cfr_plus.py  cfr_pure.py  (+6 more)
strategy/: __init__.py  equilibria.py  space.py
test/: test_2p_0sum.py  test_rm.py  utils.py
(+10 files in other folders)
